Update contact and main pages

--- a/lien-he.html
+++ b/lien-he.html
@@ -22,7 +22,7 @@
   <main class="container section">
     <div class="section-header">
       <h1 class="section-title">Liên hệ &amp; hợp tác</h1>
-      <span class="pill">Form demo (không có backend)</span>
+      <span class="pill">Form demo </span>
     </div>
     <div class="contact">
       <div class="info">
@@ -68,7 +68,7 @@
           </div>
           <button class="btn btn-primary" type="submit">Gửi lời mời hợp tác</button>
         </form>
-        <p class="note">Form demo (không có backend) - gửi thông tin để chúng tôi liên lạc qua kênh bạn chọn.</p>
+        <p class="note">Form demo  - gửi thông tin để chúng tôi liên lạc qua kênh bạn chọn.</p>
       </div>
     </div>
   </main>
