--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Studio Kinh Dị | Thiết kế ám ảnh, chuyển đổi thật</title>
+  <title>Studio  | Thiết kế studio, chuyển đổi thật</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="page">
   <header>
     <div class="container topbar">
-      <div class="logo">Studio Kinh Dị</div>
+      <div class="logo">Studio </div>
       <nav aria-label="Điều hướng chính">
         <a class="nav-link" aria-current="page" href="index.html">Trang chủ</a>
         <a class="nav-link" href="du-an.html">Dự án</a>
