Add hero side posters

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
           </div>
         </div>
       </div>
+      <aside class="side-poster side-poster--left" aria-hidden="true">
+        <img src="./img/hien-me-cho-quy.svg" alt="">
+      </aside>
+      <aside class="side-poster side-poster--right" aria-hidden="true">
+        <img src="./img/cuoi-ma.svg" alt="">
+      </aside>
       <div class="hero-visual">
         <div class="card-visual" aria-hidden="true">
           <h3>Bảng điều khiển nghi thức</h3>
